Fixed Mobile Menu / z-index

--- a/app/assets/stylesheets/_media.css.scss
+++ b/app/assets/stylesheets/_media.css.scss
@@ -96,6 +96,7 @@
             left: 0;
             position: absolute;
             display: none;
+            z-index: 10000000;
             & .form-search-mobile {
                 & input {
                     width: 100%;
